--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
     runs-on: macos-15
     strategy:
       matrix:
-        xcode: ['16.3']
+        xcode:
+          - '16.3'
     steps:
       - uses: actions/checkout@v3
       - name: Get swift version
@@ -42,10 +43,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: [
-          'swift:6.0',
-          'swift:6.1'
-        ]
+        image:
+          - swift:6.0
+          - swift:6.1
     container:
       image: ${{ matrix.image }}
     steps:
